--- a/assignment_week3.ipynb
+++ b/assignment_week3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -29,38 +29,56 @@
       "\n",
       "\n",
       "\n",
+      "# All requested packages already installed.\n",
+      "\n",
+      "Solving environment: done\n",
+      "\n",
+      "\n",
+      "==> WARNING: A newer version of conda exists. <==\n",
+      "  current version: 4.5.11\n",
+      "  latest version: 4.8.2\n",
+      "\n",
+      "Please update conda by running\n",
+      "\n",
+      "    $ conda update -n base -c defaults conda\n",
+      "\n",
+      "\n",
+      "\n",
       "## Package Plan ##\n",
       "\n",
       "  environment location: /home/jupyterlab/conda/envs/python\n",
       "\n",
       "  added / updated specs: \n",
-      "    - bs4\n",
+      "    - geocoder\n",
       "\n",
       "\n",
       "The following packages will be downloaded:\n",
       "\n",
       "    package                    |            build\n",
       "    ---------------------------|-----------------\n",
-      "    soupsieve-1.9.4            |           py36_0          58 KB  conda-forge\n",
-      "    beautifulsoup4-4.8.2       |           py36_0         157 KB  conda-forge\n",
-      "    bs4-4.8.2                  |                0           4 KB  conda-forge\n",
+      "    future-0.18.2              |           py36_0         713 KB  conda-forge\n",
+      "    click-7.0                  |             py_0          61 KB  conda-forge\n",
+      "    ratelim-0.1.6              |             py_2           6 KB  conda-forge\n",
+      "    geocoder-1.38.1            |             py_1          53 KB  conda-forge\n",
       "    ------------------------------------------------------------\n",
-      "                                           Total:         219 KB\n",
+      "                                           Total:         833 KB\n",
       "\n",
       "The following NEW packages will be INSTALLED:\n",
       "\n",
-      "    bs4:            4.8.2-0      conda-forge\n",
-      "    soupsieve:      1.9.4-py36_0 conda-forge\n",
+      "    future:   0.18.2-py36_0 conda-forge\n",
+      "    geocoder: 1.38.1-py_1   conda-forge\n",
+      "    ratelim:  0.1.6-py_2    conda-forge\n",
       "\n",
       "The following packages will be UPDATED:\n",
       "\n",
-      "    beautifulsoup4: 4.6.3-py37_0             --> 4.8.2-py36_0 conda-forge\n",
+      "    click:    6.7-py37_0                --> 7.0-py_0 conda-forge\n",
       "\n",
       "\n",
       "Downloading and Extracting Packages\n",
-      "soupsieve-1.9.4      | 58 KB     | ##################################### | 100% \n",
-      "beautifulsoup4-4.8.2 | 157 KB    | ##################################### | 100% \n",
-      "bs4-4.8.2            | 4 KB      | ##################################### | 100% \n",
+      "future-0.18.2        | 713 KB    | ##################################### | 100% \n",
+      "click-7.0            | 61 KB     | ##################################### | 100% \n",
+      "ratelim-0.1.6        | 6 KB      | ##################################### | 100% \n",
+      "geocoder-1.38.1      | 53 KB     | ##################################### | 100% \n",
       "Preparing transaction: done\n",
       "Verifying transaction: done\n",
       "Executing transaction: done\n"
@@ -69,12 +87,13 @@
    ],
    "source": [
     "# install bs4 \n",
-    "!conda install -c conda-forge bs4 --yes"
+    "!conda install -c conda-forge bs4 --yes\n",
+    "#!conda install -c conda-forge geocoder --yes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +102,7 @@
        "{'User-Agent': 'Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0', 'Accept-Encoding': 'gzip, deflate', 'Accept': '*/*', 'Connection': 'keep-alive'}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +215,7 @@
        "4      M5A  Downtown Toronto      Harbourfront"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -256,6 +275,115 @@
       "okie, not having 'Not assigned' in Neighbourhood field\n",
       "size of data after process: (210, 3)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postcode</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighbourhood</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M3A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Parkwoods</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M4A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Victoria Village</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M5A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Harbourfront</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>M6A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Lawrence Heights</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>M6A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Lawrence Manor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>M7A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Queen's Park</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>M9A</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Islington Avenue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Rouge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Malvern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>M3B</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Don Mills North</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Postcode           Borough     Neighbourhood\n",
+       "2       M3A        North York         Parkwoods\n",
+       "3       M4A        North York  Victoria Village\n",
+       "4       M5A  Downtown Toronto      Harbourfront\n",
+       "5       M6A        North York  Lawrence Heights\n",
+       "6       M6A        North York    Lawrence Manor\n",
+       "7       M7A  Downtown Toronto      Queen's Park\n",
+       "9       M9A         Etobicoke  Islington Avenue\n",
+       "10      M1B       Scarborough             Rouge\n",
+       "11      M1B       Scarborough           Malvern\n",
+       "13      M3B        North York   Don Mills North"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -265,8 +393,278 @@
     "# check 'Not assigned' if in 'Neighbourhood' field \n",
     "if np.any(toronto_data['Neighbourhood'] != 'Not assigned'):\n",
     "    print(\"okie, not having 'Not assigned' in Neighbourhood field\")\n",
-    "print('size of data after process:', toronto_data.shape)"
+    "print('size of data after process:', toronto_data.shape)\n",
+    "toronto_data.head(10)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Generate (Lat,Long) from Postcode using geocode python "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postcode</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>43.806686</td>\n",
+       "      <td>-79.194353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M1C</td>\n",
+       "      <td>43.784535</td>\n",
+       "      <td>-79.160497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M1E</td>\n",
+       "      <td>43.763573</td>\n",
+       "      <td>-79.188711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M1G</td>\n",
+       "      <td>43.770992</td>\n",
+       "      <td>-79.216917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M1H</td>\n",
+       "      <td>43.773136</td>\n",
+       "      <td>-79.239476</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Postcode   Latitude  Longitude\n",
+       "0      M1B  43.806686 -79.194353\n",
+       "1      M1C  43.784535 -79.160497\n",
+       "2      M1E  43.763573 -79.188711\n",
+       "3      M1G  43.770992 -79.216917\n",
+       "4      M1H  43.773136 -79.239476"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# read longitude and latitude from file\n",
+    "df_latlong = pd.read_csv('Geospatial_Coordinates.csv') \n",
+    "df_latlong.rename(columns = {'Postal Code':'Postcode'}, inplace = True)\n",
+    "df_latlong.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Postcode           Borough     Neighbourhood\n",
+      "2       M3A        North York         Parkwoods\n",
+      "3       M4A        North York  Victoria Village\n",
+      "4       M5A  Downtown Toronto      Harbourfront\n",
+      "5       M6A        North York  Lawrence Heights\n",
+      "6       M6A        North York    Lawrence Manor\n",
+      "7       M7A  Downtown Toronto      Queen's Park\n",
+      "9       M9A         Etobicoke  Islington Avenue\n",
+      "10      M1B       Scarborough             Rouge\n",
+      "11      M1B       Scarborough           Malvern\n",
+      "13      M3B        North York   Don Mills North\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postcode</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighbourhood</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M3A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Parkwoods</td>\n",
+       "      <td>43.753259</td>\n",
+       "      <td>-79.329656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M4A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Victoria Village</td>\n",
+       "      <td>43.725882</td>\n",
+       "      <td>-79.315572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M5A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Harbourfront</td>\n",
+       "      <td>43.654260</td>\n",
+       "      <td>-79.360636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M6A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Lawrence Heights</td>\n",
+       "      <td>43.718518</td>\n",
+       "      <td>-79.464763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M6A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Lawrence Manor</td>\n",
+       "      <td>43.718518</td>\n",
+       "      <td>-79.464763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>M7A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Queen's Park</td>\n",
+       "      <td>43.662301</td>\n",
+       "      <td>-79.389494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>M9A</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Islington Avenue</td>\n",
+       "      <td>43.667856</td>\n",
+       "      <td>-79.532242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Rouge</td>\n",
+       "      <td>43.806686</td>\n",
+       "      <td>-79.194353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Malvern</td>\n",
+       "      <td>43.806686</td>\n",
+       "      <td>-79.194353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>M3B</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Don Mills North</td>\n",
+       "      <td>43.745906</td>\n",
+       "      <td>-79.352188</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Postcode           Borough     Neighbourhood   Latitude  Longitude\n",
+       "0      M3A        North York         Parkwoods  43.753259 -79.329656\n",
+       "1      M4A        North York  Victoria Village  43.725882 -79.315572\n",
+       "2      M5A  Downtown Toronto      Harbourfront  43.654260 -79.360636\n",
+       "3      M6A        North York  Lawrence Heights  43.718518 -79.464763\n",
+       "4      M6A        North York    Lawrence Manor  43.718518 -79.464763\n",
+       "5      M7A  Downtown Toronto      Queen's Park  43.662301 -79.389494\n",
+       "6      M9A         Etobicoke  Islington Avenue  43.667856 -79.532242\n",
+       "7      M1B       Scarborough             Rouge  43.806686 -79.194353\n",
+       "8      M1B       Scarborough           Malvern  43.806686 -79.194353\n",
+       "9      M3B        North York   Don Mills North  43.745906 -79.352188"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# assign lat and long to the toronto_data\n",
+    "print(toronto_data.head(10))\n",
+    "toronto_data_final = toronto_data.merge(df_latlong, on = 'Postcode', how = 'left')\n",
+    "toronto_data_final.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
