--- a/assignment_week3.ipynb
+++ b/assignment_week3.ipynb
@@ -235,14 +235,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Not assigned        77\n",
       "Etobicoke           45\n",
       "North York          38\n",
       "Downtown Toronto    37\n",
@@ -254,7 +253,7 @@
       "East York            6\n",
       "Mississauga          1\n",
       "Name: Borough, dtype: int64\n",
-      "size of data before process: (287, 3)\n"
+      "size of data before process: (210, 3)\n"
      ]
     }
    ],
@@ -265,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -273,115 +272,27 @@
      "output_type": "stream",
      "text": [
       "okie, not having 'Not assigned' in Neighbourhood field\n",
-      "size of data after process: (210, 3)\n"
+      "size of data after process: (210, 3)\n",
+      "   Postcode           Borough     Neighbourhood\n",
+      "2       M3A        North York         Parkwoods\n",
+      "3       M4A        North York  Victoria Village\n",
+      "4       M5A  Downtown Toronto      Harbourfront\n",
+      "5       M6A        North York  Lawrence Heights\n",
+      "6       M6A        North York    Lawrence Manor\n",
+      "7       M7A  Downtown Toronto      Queen's Park\n",
+      "9       M9A         Etobicoke  Islington Avenue\n",
+      "10      M1B       Scarborough             Rouge\n",
+      "11      M1B       Scarborough           Malvern\n",
+      "13      M3B        North York   Don Mills North\n"
      ]
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Postcode</th>\n",
-       "      <th>Borough</th>\n",
-       "      <th>Neighbourhood</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>M3A</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>Parkwoods</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>M4A</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>Victoria Village</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>M5A</td>\n",
-       "      <td>Downtown Toronto</td>\n",
-       "      <td>Harbourfront</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>M6A</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>Lawrence Heights</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>M6A</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>Lawrence Manor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>M7A</td>\n",
-       "      <td>Downtown Toronto</td>\n",
-       "      <td>Queen's Park</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>M9A</td>\n",
-       "      <td>Etobicoke</td>\n",
-       "      <td>Islington Avenue</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>M1B</td>\n",
-       "      <td>Scarborough</td>\n",
-       "      <td>Rouge</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>M1B</td>\n",
-       "      <td>Scarborough</td>\n",
-       "      <td>Malvern</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>M3B</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>Don Mills North</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Postcode           Borough     Neighbourhood\n",
-       "2       M3A        North York         Parkwoods\n",
-       "3       M4A        North York  Victoria Village\n",
-       "4       M5A  Downtown Toronto      Harbourfront\n",
-       "5       M6A        North York  Lawrence Heights\n",
-       "6       M6A        North York    Lawrence Manor\n",
-       "7       M7A  Downtown Toronto      Queen's Park\n",
-       "9       M9A         Etobicoke  Islington Avenue\n",
-       "10      M1B       Scarborough             Rouge\n",
-       "11      M1B       Scarborough           Malvern\n",
-       "13      M3B        North York   Don Mills North"
+       "(103, 3)"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +305,11 @@
     "if np.any(toronto_data['Neighbourhood'] != 'Not assigned'):\n",
     "    print(\"okie, not having 'Not assigned' in Neighbourhood field\")\n",
     "print('size of data after process:', toronto_data.shape)\n",
-    "toronto_data.head(10)"
+    "print(toronto_data.head(10))\n",
+    "\n",
+    "# group all neighborhood with same postcode\n",
+    "toronto_data = toronto_data.groupby(['Postcode','Borough'])['Neighbourhood'].apply(', '.join).reset_index()\n",
+    "toronto_data.shape"
    ]
   },
   {
@@ -406,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +394,7 @@
        "4      M1H  43.773136 -79.239476"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,24 +408,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Postcode           Borough     Neighbourhood\n",
-      "2       M3A        North York         Parkwoods\n",
-      "3       M4A        North York  Victoria Village\n",
-      "4       M5A  Downtown Toronto      Harbourfront\n",
-      "5       M6A        North York  Lawrence Heights\n",
-      "6       M6A        North York    Lawrence Manor\n",
-      "7       M7A  Downtown Toronto      Queen's Park\n",
-      "9       M9A         Etobicoke  Islington Avenue\n",
-      "10      M1B       Scarborough             Rouge\n",
-      "11      M1B       Scarborough           Malvern\n",
-      "13      M3B        North York   Don Mills North\n"
+      "  Postcode      Borough                                    Neighbourhood\n",
+      "0      M1B  Scarborough                                   Rouge, Malvern\n",
+      "1      M1C  Scarborough           Highland Creek, Rouge Hill, Port Union\n",
+      "2      M1E  Scarborough                Guildwood, Morningside, West Hill\n",
+      "3      M1G  Scarborough                                           Woburn\n",
+      "4      M1H  Scarborough                                        Cedarbrae\n",
+      "5      M1J  Scarborough                              Scarborough Village\n",
+      "6      M1K  Scarborough      East Birchmount Park, Ionview, Kennedy Park\n",
+      "7      M1L  Scarborough                  Clairlea, Golden Mile, Oakridge\n",
+      "8      M1M  Scarborough  Cliffcrest, Cliffside, Scarborough Village West\n",
+      "9      M1N  Scarborough                      Birch Cliff, Cliffside West\n"
      ]
     },
     {
@@ -544,103 +459,115 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>M3A</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>Parkwoods</td>\n",
-       "      <td>43.753259</td>\n",
-       "      <td>-79.329656</td>\n",
+       "      <td>M1B</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Rouge, Malvern</td>\n",
+       "      <td>43.806686</td>\n",
+       "      <td>-79.194353</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>M4A</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>Victoria Village</td>\n",
-       "      <td>43.725882</td>\n",
-       "      <td>-79.315572</td>\n",
+       "      <td>M1C</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Highland Creek, Rouge Hill, Port Union</td>\n",
+       "      <td>43.784535</td>\n",
+       "      <td>-79.160497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>M5A</td>\n",
-       "      <td>Downtown Toronto</td>\n",
-       "      <td>Harbourfront</td>\n",
-       "      <td>43.654260</td>\n",
-       "      <td>-79.360636</td>\n",
+       "      <td>M1E</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Guildwood, Morningside, West Hill</td>\n",
+       "      <td>43.763573</td>\n",
+       "      <td>-79.188711</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>M6A</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>Lawrence Heights</td>\n",
-       "      <td>43.718518</td>\n",
-       "      <td>-79.464763</td>\n",
+       "      <td>M1G</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Woburn</td>\n",
+       "      <td>43.770992</td>\n",
+       "      <td>-79.216917</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>M6A</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>Lawrence Manor</td>\n",
-       "      <td>43.718518</td>\n",
-       "      <td>-79.464763</td>\n",
+       "      <td>M1H</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Cedarbrae</td>\n",
+       "      <td>43.773136</td>\n",
+       "      <td>-79.239476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>M7A</td>\n",
-       "      <td>Downtown Toronto</td>\n",
-       "      <td>Queen's Park</td>\n",
-       "      <td>43.662301</td>\n",
-       "      <td>-79.389494</td>\n",
+       "      <td>M1J</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Scarborough Village</td>\n",
+       "      <td>43.744734</td>\n",
+       "      <td>-79.239476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>M9A</td>\n",
-       "      <td>Etobicoke</td>\n",
-       "      <td>Islington Avenue</td>\n",
-       "      <td>43.667856</td>\n",
-       "      <td>-79.532242</td>\n",
+       "      <td>M1K</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>East Birchmount Park, Ionview, Kennedy Park</td>\n",
+       "      <td>43.727929</td>\n",
+       "      <td>-79.262029</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>M1B</td>\n",
+       "      <td>M1L</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Rouge</td>\n",
-       "      <td>43.806686</td>\n",
-       "      <td>-79.194353</td>\n",
+       "      <td>Clairlea, Golden Mile, Oakridge</td>\n",
+       "      <td>43.711112</td>\n",
+       "      <td>-79.284577</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>M1B</td>\n",
+       "      <td>M1M</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Malvern</td>\n",
-       "      <td>43.806686</td>\n",
-       "      <td>-79.194353</td>\n",
+       "      <td>Cliffcrest, Cliffside, Scarborough Village West</td>\n",
+       "      <td>43.716316</td>\n",
+       "      <td>-79.239476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>M3B</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>Don Mills North</td>\n",
-       "      <td>43.745906</td>\n",
-       "      <td>-79.352188</td>\n",
+       "      <td>M1N</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Birch Cliff, Cliffside West</td>\n",
+       "      <td>43.692657</td>\n",
+       "      <td>-79.264848</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Postcode           Borough     Neighbourhood   Latitude  Longitude\n",
-       "0      M3A        North York         Parkwoods  43.753259 -79.329656\n",
-       "1      M4A        North York  Victoria Village  43.725882 -79.315572\n",
-       "2      M5A  Downtown Toronto      Harbourfront  43.654260 -79.360636\n",
-       "3      M6A        North York  Lawrence Heights  43.718518 -79.464763\n",
-       "4      M6A        North York    Lawrence Manor  43.718518 -79.464763\n",
-       "5      M7A  Downtown Toronto      Queen's Park  43.662301 -79.389494\n",
-       "6      M9A         Etobicoke  Islington Avenue  43.667856 -79.532242\n",
-       "7      M1B       Scarborough             Rouge  43.806686 -79.194353\n",
-       "8      M1B       Scarborough           Malvern  43.806686 -79.194353\n",
-       "9      M3B        North York   Don Mills North  43.745906 -79.352188"
+       "  Postcode      Borough                                    Neighbourhood  \\\n",
+       "0      M1B  Scarborough                                   Rouge, Malvern   \n",
+       "1      M1C  Scarborough           Highland Creek, Rouge Hill, Port Union   \n",
+       "2      M1E  Scarborough                Guildwood, Morningside, West Hill   \n",
+       "3      M1G  Scarborough                                           Woburn   \n",
+       "4      M1H  Scarborough                                        Cedarbrae   \n",
+       "5      M1J  Scarborough                              Scarborough Village   \n",
+       "6      M1K  Scarborough      East Birchmount Park, Ionview, Kennedy Park   \n",
+       "7      M1L  Scarborough                  Clairlea, Golden Mile, Oakridge   \n",
+       "8      M1M  Scarborough  Cliffcrest, Cliffside, Scarborough Village West   \n",
+       "9      M1N  Scarborough                      Birch Cliff, Cliffside West   \n",
+       "\n",
+       "    Latitude  Longitude  \n",
+       "0  43.806686 -79.194353  \n",
+       "1  43.784535 -79.160497  \n",
+       "2  43.763573 -79.188711  \n",
+       "3  43.770992 -79.216917  \n",
+       "4  43.773136 -79.239476  \n",
+       "5  43.744734 -79.239476  \n",
+       "6  43.727929 -79.262029  \n",
+       "7  43.711112 -79.284577  \n",
+       "8  43.716316 -79.239476  \n",
+       "9  43.692657 -79.264848  "
       ]
      },
-     "execution_count": 152,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,10 +581,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "toronto_data_final.to_csv('toronto_data.csv')"
+   ]
   },
   {
    "cell_type": "code",
