final task week 4 second time

--- a/raw_data.ipynb
+++ b/raw_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### data acquisition\n",
+    "- to obtain data, i use the link on wiki containing boroughs and neiborhoods of Amsterdams 'https://en.wikipedia.org/wiki/Boroughs_of_Amsterdam#List_of_boroughs' , and then, scrape the table with meaningful information inside."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -62,35 +70,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Put the data in previous section into 2 columns with boroughs and all neiborhoods in Amsterdam, Netherlands\n",
+    "- The table for neighborhoods are processed by seperating into rows according to each borough"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             Borough          Neighborhoods\n",
-      "0               West  Frederik Hendrikbuurt\n",
-      "1               West              Houthaven\n",
-      "2               West      Spaarndammerbuurt\n",
-      "3               West      Staatsliedenbuurt\n",
-      "4               West         Zeeheldenbuurt\n",
-      "5               West             Westerpark\n",
-      "6               West            Kinkerbuurt\n",
-      "7               West          Overtoombuurt\n",
-      "8               West            De Baarsjes\n",
-      "9               West          Bos en Lommer\n",
-      "10              West          Kolenkitbuurt\n",
-      "11              West               Landlust\n",
-      "12              West             Sloterdijk\n",
-      "13  Centrum (Centre)             Binnenstad\n",
-      "14  Centrum (Centre)         Grachtengordel\n",
-      "15  Centrum (Centre)        Haarlemmerbuurt\n",
-      "16  Centrum (Centre)             Jodenbuurt\n",
-      "17  Centrum (Centre)                Jordaan\n",
-      "18  Centrum (Centre)               Kadijken\n",
-      "19  Centrum (Centre)                Lastage\n"
+      "<bound method NDFrame.head of                     Borough                        Neighborhoods\n",
+      "0                      West                Frederik Hendrikbuurt\n",
+      "1                      West                            Houthaven\n",
+      "2                      West                    Spaarndammerbuurt\n",
+      "3                      West                    Staatsliedenbuurt\n",
+      "4                      West                       Zeeheldenbuurt\n",
+      "5                      West                           Westerpark\n",
+      "6                      West                          Kinkerbuurt\n",
+      "7                      West                        Overtoombuurt\n",
+      "8                      West                          De Baarsjes\n",
+      "9                      West                        Bos en Lommer\n",
+      "10                     West                        Kolenkitbuurt\n",
+      "11                     West                             Landlust\n",
+      "12                     West                           Sloterdijk\n",
+      "13         Centrum (Centre)                           Binnenstad\n",
+      "14         Centrum (Centre)                       Grachtengordel\n",
+      "15         Centrum (Centre)                      Haarlemmerbuurt\n",
+      "16         Centrum (Centre)                           Jodenbuurt\n",
+      "17         Centrum (Centre)                              Jordaan\n",
+      "18         Centrum (Centre)                             Kadijken\n",
+      "19         Centrum (Centre)                              Lastage\n",
+      "20         Centrum (Centre)                     Oosterdokseiland\n",
+      "21         Centrum (Centre)                  Oostelijke Eilanden\n",
+      "22         Centrum (Centre)                             Plantage\n",
+      "23         Centrum (Centre)                            Rapenburg\n",
+      "24         Centrum (Centre)                            Uilenburg\n",
+      "25         Centrum (Centre)                  Westelijke Eilanden\n",
+      "26         Centrum (Centre)                       Weteringschans\n",
+      "27             Zuid (South)                          Apollobuurt\n",
+      "28             Zuid (South)                        Buitenveldert\n",
+      "29             Zuid (South)                  Hoofddorppleinbuurt\n",
+      "..                      ...                                  ...\n",
+      "39              Oost (East)                               IJburg\n",
+      "40              Oost (East)                       Indische Buurt\n",
+      "41              Oost (East)                    Eastern Docklands\n",
+      "42              Oost (East)                             Oud-Oost\n",
+      "43              Oost (East)                      Watergraafsmeer\n",
+      "44     Nieuw-West(New West)                           Geuzenveld\n",
+      "45     Nieuw-West(New West)                         Nieuw Sloten\n",
+      "46     Nieuw-West(New West)                            Oostoever\n",
+      "47     Nieuw-West(New West)                               Osdorp\n",
+      "48     Nieuw-West(New West)                      Overtoomse Veld\n",
+      "49     Nieuw-West(New West)                               Sloten\n",
+      "50     Nieuw-West(New West)                           Slotermeer\n",
+      "51     Nieuw-West(New West)                          Slotervaart\n",
+      "52      Zuidoost(Southeast)                          Bijlmermeer\n",
+      "53      Zuidoost(Southeast)                         Venserpolder\n",
+      "54      Zuidoost(Southeast)                           Gaasperdam\n",
+      "55      Zuidoost(Southeast)                             Driemond\n",
+      "56            Noord (North)                      Banne Buiksloot\n",
+      "57            Noord (North)                            Buiksloot\n",
+      "58            Noord (North)                       Buikslotermeer\n",
+      "59            Noord (North)                            Floradorp\n",
+      "60            Noord (North)                             Kadoelen\n",
+      "61            Noord (North)                            Molenwijk\n",
+      "62            Noord (North)                           Nieuwendam\n",
+      "63            Noord (North)  Nieuwendammerdijk en Buiksloterdijk\n",
+      "64            Noord (North)                        Oostzanerwerf\n",
+      "65            Noord (North)                            Overhoeks\n",
+      "66            Noord (North)                  Tuindorp Nieuwendam\n",
+      "67            Noord (North)                    Tuindorp Oostzaan\n",
+      "68  Westpoort(West Gateway)                            Westpoort\n",
+      "\n",
+      "[69 rows x 2 columns]>\n"
      ]
     }
    ],
@@ -109,12 +168,20 @@
     "df_data = df_data.transpose()\n",
     "df_data.columns = ['Borough', 'Neighborhoods']\n",
     "\n",
-    "print(df_data.head(20))\n"
+    "print(df_data.head)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The coordination are required to interact with foursquare\n",
+    "- to obtain the coordination for each neighborhood, the geopy library is deployed to retrieved coordination for each neighborhood."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -299,6 +366,13 @@
    "metadata": {},
    "source": [
     "- There are some fields the geopy could not find the coordinations for latitude and longitude, so then i have to fill it by manually search each one. Howerver, that are not so many. And the final data will be attached!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And next step, the obove processed data will be used to analyze Amsterdams."
    ]
   }
  ],
